--- a/learning_js/css/style.css
+++ b/learning_js/css/style.css
@@ -6,28 +6,34 @@ h1 {
     text-align: center;
 }
 
-.box {
-    width: 150px;
-    height: 150px;
-    background-color: red;
-    border-radius: 5px;
-    margin-bottom: 10px;
+button {
+    width: 220px;
+    height: 50px;
+    background-color: palegreen;
+    color: black;
+    padding: 10px;
+    border-radius: 10px;
+    cursor: pointer;
+    margin-bottom: 5px;
 }
 
 .wrapper {
-    display: flex;
-    justify-content: center;
-}
-
-.heart {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    background-color: hotpink;
-}
-
-.black {
+    position: relative;
+    width: 400px;
+    height: 400px;
+    border: 3px solid palegreen;
+    border-radius: 15px;
     background-color: #000;
+}
+
+.box {
+    position: absolute;
     width: 100px;
     height: 100px;
+    background-color: palegreen;
+    border-radius: 10px;
+}
+
+.red {
+    background-color: orangered;
 }
